Hot fix: alignment of first subway station design detail

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -247,8 +247,8 @@ footer .footer {
             background: linear-gradient(
               180deg,
               rgba(251, 242, 227, 1) 0%,
-              rgba(251, 242, 227, 1) 30%,
-              rgba(7, 174, 209, 1) 30%,
+              rgba(251, 242, 227, 1) 25%,
+              rgba(7, 174, 209, 1) 25%,
               rgba(7, 174, 209, 1) 100%
             );
           }
